# DataStructure

./: 1.3Maximum_subcolumn_sum_problem.c  CMakeLists.txt  linkTest2.c  stdlink.h
TEST/: CMakeLists.txt
TEST/Link/: CMakeLists.txt  linkTest.c  linkTest2.c
TEST/Stack/Array/: CMakeLists.txt  TEST_2.2_MyStact_Array.c  TEST_2.2_Stack_Array.c
TEST/True/: CMakeLists.txt
TEST/True/Dome1/: CMakeLists.txt  trueTest.c
hDocuments/: stdlink.h  stdstack.h
