include_directories(${CMAKE_SOURCE_DIR}/hDocuments) #包含父路径下的hDocuments文件夹
 #CMAKE_SOURCE_DIR 表示CmakeLists根目录

add_executable(linkTest  linkTest.c)
add_executable(linkTest2 linkTest2.c)
#add_executable()
#add_executable()
#add_executable()
#add_executable()
#add_executable()
#add_executable()
#add_executable()
#add_executable()
#add_executable()
#add_executable()
#add_executable()
#add_executable()
#add_executable()
#add_executable()
#add_executable()
#add_executable()
#add_executable()
#add_executable()
#add_executable()
#add_executable()
#add_executable()
#add_executable()
#add_executable()
#add_executable()
#add_executable()
#add_executable()
#add_executable()
#add_executable()
#add_executable()
#add_executable()
#add_executable()
#add_executable()
#add_executable()
#add_executable()
#add_executable()
#add_executable()
#add_executable()
#add_executable()
